@@ -1307,14 +1307,23 @@ public class SyntaxRegressionTest extends BaseTestCase {
     }
 
     private void testCreateTablespaceCheckTablespaces(int expectedTsCount) throws Exception {
-        this.rs = this.stmt.executeQuery("SELECT COUNT(*) FROM information_schema.innodb_sys_tablespaces WHERE name LIKE 'testTs_'");
+        if (versionMeetsMinimum(8, 0, 3)) {
+            this.rs = this.stmt.executeQuery("SELECT COUNT(*) FROM information_schema.innodb_tablespaces WHERE name LIKE 'testTs_'");
+        } else {
+            this.rs = this.stmt.executeQuery("SELECT COUNT(*) FROM information_schema.innodb_sys_tablespaces WHERE name LIKE 'testTs_'");
+        }
         assertTrue(this.rs.next());
         assertEquals(expectedTsCount, this.rs.getInt(1));
     }
 
     private void testCreateTablespaceCheckTables(String tablespace, int expectedTblCount) throws Exception {
-        this.rs = this.stmt.executeQuery("SELECT COUNT(*) FROM information_schema.innodb_sys_tables a, information_schema.innodb_sys_tablespaces b "
-                + "WHERE a.space = b.space AND b.name = '" + tablespace + "'");
+        if (versionMeetsMinimum(8, 0, 3)) {
+            this.rs = this.stmt.executeQuery("SELECT COUNT(*) FROM information_schema.innodb_tables a, information_schema.innodb_tablespaces b "
+                    + "WHERE a.space = b.space AND b.name = '" + tablespace + "'");
+        } else {
+            this.rs = this.stmt.executeQuery("SELECT COUNT(*) FROM information_schema.innodb_sys_tables a, information_schema.innodb_sys_tablespaces b "
+                    + "WHERE a.space = b.space AND b.name = '" + tablespace + "'");
+        }
         assertTrue(this.rs.next());
         assertEquals(expectedTblCount, this.rs.getInt(1));
     }
@@ -1365,9 +1374,13 @@ public class SyntaxRegressionTest extends BaseTestCase {
     }
 
     private void testSetMergeThresholdIndices(int defaultMergeThreshold, Map<String, Integer> keyMergeThresholds) throws Exception {
-        this.rs = this.stmt.executeQuery("SELECT name, merge_threshold FROM information_schema.innodb_sys_indexes WHERE table_id = "
-                + "(SELECT table_id FROM information_schema.innodb_sys_tables WHERE name = '" + this.conn.getCatalog() + "/testSetMergeThreshold')");
-
+        if (versionMeetsMinimum(8, 0, 3)) {
+            this.rs = this.stmt.executeQuery("SELECT name, merge_threshold FROM information_schema.innodb_indexes WHERE table_id = "
+                    + "(SELECT table_id FROM information_schema.innodb_tables WHERE name = '" + this.conn.getCatalog() + "/testSetMergeThreshold')");
+        } else {
+            this.rs = this.stmt.executeQuery("SELECT name, merge_threshold FROM information_schema.innodb_sys_indexes WHERE table_id = "
+                    + "(SELECT table_id FROM information_schema.innodb_sys_tables WHERE name = '" + this.conn.getCatalog() + "/testSetMergeThreshold')");
+        }
         while (this.rs.next()) {
             int expected = keyMergeThresholds.containsKey(this.rs.getString(1)) ? keyMergeThresholds.get(this.rs.getString(1)) : defaultMergeThreshold;
             assertEquals("MERGE_THRESHOLD for index " + this.rs.getString(1), expected, this.rs.getInt(2));
